--- a/Trajektoria/autor.ui
+++ b/Trajektoria/autor.ui
@@ -25,6 +25,10 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>ikona2.png</normaloff>ikona2.png</iconset>
+  </property>
   <property name="modal">
    <bool>true</bool>
   </property>
@@ -41,7 +45,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../build-Trajektoria_v03-Desktop_Qt_5_0_2_MinGW_32bit-Debug/ikona2.png</pixmap>
+    <pixmap>ikona2.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
