--- a/Trajektoria/statystyki.ui
+++ b/Trajektoria/statystyki.ui
@@ -118,9 +118,9 @@
   <widget class="QLabel" name="l_vMax">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>60</x>
      <y>50</y>
-     <width>101</width>
+     <width>91</width>
      <height>16</height>
     </rect>
    </property>
@@ -342,14 +342,14 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>30</x>
      <y>80</y>
-     <width>53</width>
+     <width>141</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>Wysokość maksymalna:</string>
    </property>
   </widget>
   <widget class="QLabel" name="ymax">
