--- a/Trajektoria/mainwindow.ui
+++ b/Trajektoria/mainwindow.ui
@@ -539,7 +539,7 @@
     </rect>
    </property>
    <property name="autoFillBackground">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="styleSheet">
     <string notr="true"/>
